amends to links on grand and focus page - date changes

--- a/focus.html
+++ b/focus.html
@@ -50,39 +50,38 @@
             <p>ADP vous invite à assister à son Focus Actu. Un événement online gratuit de 45 min, animé par nos experts du pôle veille légale, pour déchiffrer deux sujets phares de l’actualité sociale et légale.
             <br>
             <br>
-            <strong>AU PROGRAMME DE NOTRE ÉDITION DE NOVEMBRE:</strong></p>
-            <ul>
-                <li>1. L’activité partielle</li>
-                <li>2. Les différentes aides aux entreprises</li>
-            </ul>
+            <strong>AU PROGRAMME DE NOTRE ÉDITION DE JANVIER:</strong></p>
+            <p>En construction. Nous travaillons sur un programme au plus proche de l’actualité.</p>
         </div>
 
         <div class="col-right">
             <div class="col-right-content">
                 <img src="images/head.png" class="head-logo" alt="adp logo image of a man">
-                <h2>3 sessions disponibles en novembre afin de revenir sur deux sujets phares de l’actualité sociale et légale</h2>
+                <h2>3 sessions disponibles en janvier afin de revenir sur deux sujets phares de l’actualité sociale et légale</h2>
+
+                <h3>Inscriptions ouvertes prochainement</h3>
 
                 <ul>
                     <li>
-                        <p>10 novembre<br>
-                            10h - 10h 45
+                        <p>19 janvier<br>
+                            10h - 11h
                         </p>
                     </li>
-                    <a href="https://event.on24.com/wcc/r/2777362/F795EA9C3ECD27922A42F2EB8C219FEB?partnerref=Matinales-Website" target="_blank">Je m’inscris</a>
+                    <a href="">Je m’inscris</a>
 
                     <li>
-                        <p>12 novembre<br>
-                            10h - 10h 45
+                        <p>21 janvier<br>
+                            10h - 11h
                         </p>
                     </li>
-                    <a href="https://event.on24.com/wcc/r/2802741/B194C8559915A0997DCA6C44D38ADF68?partnerref=Matinales-Website" target="_blank">Je m’inscris</a>
+                    <a href="">Je m’inscris</a>
 
                     <li>
-                        <p>13 novembre<br>
-                            10h - 10h 45 
+                        <p>22 janvier<br>
+                            10h - 11h 
                         </p>
                     </li>
-                    <a href="https://event.on24.com/wcc/r/2802742/B6DF6330F16B701BA974230FF8BB3A41?partnerref=Matinales-Website" target="_blank">Je m’inscris</a>
+                    <a href="">Je m’inscris</a>
                 </ul>
             </div>
         </div>
