--- a/grand.html
+++ b/grand.html
@@ -51,51 +51,42 @@
             <br>
             <br>
             <strong>AU PROGRAMME DE NOTRE PROCHAINE ÉDITION
-            DE DÉCEMBRE:</strong>
+            DE Février:</strong>
             </p>
-            <ul>
-                <li>
-                    <p>Etat d’urgence sanitaire : impacts paie (formation, télétravail, test antigéniques, activité partielle…)</p>
-                </li>
-                <li>
-                    <p>Les projets de Loi de finances et de financement de la Sécurité sociale pour 2021</p>
-                </li>
-                <li>
-                    <p>Projets en cours</p>
-                </li>
-            </ul>
+            <p>En construction. Nous travaillons sur un programme au plus proche de l’actualité.</p>
         </div>
 
         <div class="col-right">
             <div class="col-right-content">
                 <img src="images/head.png" class="head-logo" alt="adp logo image of a man">
-                <h2>3 sessions disponibles en décembre pour faire le tour de l’actualité sociale</h2>
+                <h2>3 sessions disponibles en février pour faire le tour de l’actualité sociale</h2>
+                <h3>Inscriptions ouvertes prochainement</h3>
                 <ul>
                     <li>
-                        <p>8 décembre<br>
+                        <p>Date à venir<br>
                             10h - 11h 30
                         </p>
                     </li>
-                    <a href="https://event.on24.com/wcc/r/2836237/0685ADDF819F9070BAEB02B88F53C993?partnerref=Matinale-Website" target="_blank">Je m’inscris</a>
+                    <a href="">Je m’inscris</a>
 
                     <li>
-                        <p>10 décembre <br>
+                        <p>Date à venir<br>
                             10h - 11h 30
                         </p>
                     </li>
-                    <a href="https://event.on24.com/wcc/r/2847188/6A6B6B2C51994A97950A7FBC4F0F0F7A?partnerref=Matinale-Website" target="_blank">Je m’inscris</a>
+                    <a href="">Je m’inscris</a>
 
                     <li>
-                        <p>11 décembre <br>
+                        <p>Date à venir<br>
                             10h - 11h 30  
                         </p>
                     </li>
-                    <a href="https://event.on24.com/wcc/r/2847190/45396BFEDE0C6F10B420B914BBC5C607?partnerref=Matinale-Website" target="_blank">Je m’inscris</a>
+                    <a href="">Je m’inscris</a>
                 </ul>
             </div>
         </div>
     </div>
-    <h3><a href="https://event.on24.com/wcc/r/2663742/F252FB1927F23155F3EC2204ABA1570D?partnerref=Matinales-Website" class="replay">En attendant la prochaine Grande Matinale, regardez ICI le replay de notre édition d’octobre.</a> </h3>
+    <h3><a href="https://event.on24.com/wcc/r/2836237/0685ADDF819F9070BAEB02B88F53C993?partnerref=Matinale-Website" class="replay">En attendant la prochaine Grande Matinale, regardez ICI le replay de notre édition d’octobre.</a> </h3>
 </div>
 
 <footer>
